--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "release-it": "^14.2.2",
+    "release-it": "^14.2.2"
   },
   "peerDependencies": {
     "react": "*",
